# cppkiteconnect

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  clangtidyfile  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cppkiteconnect-test.yml
cmake/modules/: FindGMock.cmake
cmake/templates/: Doxyfile.in
doc/: conffile
doc/html/: annotated.html  classes.html  classkitepp_1_1dataException-members.html  classkitepp_1_1dataException.html  classkitepp_1_1generalException-members.html  classkitepp_1_1generalException.html  classkitepp_1_1inputException-members.html  classkitepp_1_1inputException.html  classkitepp_1_1kite-members.html  classkitepp_1_1kite.html  classkitepp_1_1kiteppException-members.html  classkitepp_1_1kiteppException.html  classkitepp_1_1libException-members.html  classkitepp_1_1libException.html  classkitepp_1_1networkException-members.html  classkitepp_1_1networkException.html  classkitepp_1_1noException-members.html  classkitepp_1_1noException.html  classkitepp_1_1orderException-members.html  classkitepp_1_1orderException.html  classkitepp_1_1permissionException-members.html  classkitepp_1_1permissionException.html  classkitepp_1_1tokenException-members.html  classkitepp_1_1tokenException.html  classkitepp_1_1userException-members.html  classkitepp_1_1userException.html  config_8hpp_source.html  dir_27563809c1ff546f04b710527e694dba.html  dir_3913db33c9ea1b406f26d7ac70b8b674.html  dir_4eea722f3c869590f3a6f1fbf02cab5c.html  dir_90c09aef0de4fc946ee9a941f3912ed3.html  dir_a28040696503d25fbebf19f2a936e446.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d51ec264aa34123bea87f64939e38010.html  dir_d8204c442212f143ddb290194c0d6c5e.html  dir_f09b5d5695dd8687a4fe336551b236af.html  files.html  functions.html  functions_func.html  (+6 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  (+1 more)
docs/: CMakeLists.txt  conf.doxygen  config.doxygen  footer.html  header.html  mainpage.dox  mainpage.md
docs/html/: annotated.html  classes.html  classkitepp_1_1dataException-members.html  classkitepp_1_1dataException.html  classkitepp_1_1generalException-members.html  classkitepp_1_1generalException.html  classkitepp_1_1inputException-members.html  classkitepp_1_1inputException.html  classkitepp_1_1kite-members.html  classkitepp_1_1kite.html  classkitepp_1_1kiteppException-members.html  classkitepp_1_1kiteppException.html  classkitepp_1_1libException-members.html  classkitepp_1_1libException.html  classkitepp_1_1networkException-members.html  classkitepp_1_1networkException.html  classkitepp_1_1noException-members.html  classkitepp_1_1noException.html  classkitepp_1_1orderException-members.html  classkitepp_1_1orderException.html  classkitepp_1_1permissionException-members.html  classkitepp_1_1permissionException.html  classkitepp_1_1tokenException-members.html  classkitepp_1_1tokenException.html  classkitepp_1_1userException-members.html  classkitepp_1_1userException.html  config_8hpp_source.html  dir_4eea722f3c869590f3a6f1fbf02cab5c.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  kite_8hpp_source.html  kitepp_8hpp_source.html  kiteppexception_8hpp_source.html  kiteppexceptions_8hpp_source.html  menudata.js
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+3 more)
examples/: example1.cpp  example2.cpp  example3.cpp  example4.cpp
examples/example1/: CMakeLists.txt  example1.cpp
examples/example2/: CMakeLists.txt  example2.cpp
examples/example3/: CMakeLists.txt  example3.cpp
examples/example4/: CMakeLists.txt  example4.cpp
include/: config.hpp  kite.h  kitepp.hpp  kiteppexception.hpp  kiteppexceptions.hpp
include/kitepp/: config.hpp  exceptions.hpp  helperfunctions.hpp  kite.hpp  kiteppexception.hpp  kiteppexceptions.hpp  kitews.hpp  responses.hpp  rjhelper.hpp  rjutils.hpp  ticker.hpp  userconstants.hpp  utils.hpp
include/kitepp/kite/: api.hpp  gtt.hpp  internal.hpp  kite.hpp  margins.hpp  market.hpp  mf.hpp  order.hpp  portfolio.hpp  user.hpp
include/kitepp/responses/: gtt.hpp  historical.hpp  instruments.hpp  marginCalculation.hpp  margins.hpp  market.hpp  mf.hpp  order.hpp  portfolio.hpp  quotes.hpp  responses.hpp  user.hpp  ws.hpp
include/kitepp/ticker/: internal.hpp  ws.hpp
src/: main.cpp
tests/: CMakeLists.txt  rjtest.cpp
tests/mock_custom/: generate_session.json  invalidate_session.json
tests/mock_responses/: generate_session.json  historical_minute.json  holdings.json  instruments_all.csv  mf_instruments.csv  mf_sip_info.json  mf_sips.json  profile.json
tests/unit/: kitepp.hpp  kitetest.cpp  kwstest.cpp  main.cpp  rjtest.cpp  tickertest.cpp  utils.hpp
tests/unit/kite/: api.cpp  gtt.cpp  margins.cpp  market.cpp  mf.cpp  order.cpp  portfolio.cpp  user.cpp
